Missing impendance control

--- a/Tabele/vel_step.tex
+++ b/Tabele/vel_step.tex
@@ -4,14 +4,14 @@
 	\begin{footnotesize}
 		\begin{tabular}{|l c l|}
 		\hline
-		$ t_m $ & = & 0,012 \\
-		$ t_r $ & = & 0,086 \\
-		$ t_p $ & = & 0,166 \\
-		$ M_p $ & = & 0,1004 \\
-		$ t_s $ & = & 0,316 \\
+		$ t_m $ & = & 0,008 s\\
+		$ t_r $ & = & 0,094 s\\
+		$ t_p $ & = & 0,166 s\\
+		$ M_p $ & = & 0,0999 rad\\
+		$ t_s $ & = & 0,414 s\\
 		\hline
 		\end{tabular}
 	\end{footnotesize}
-	\caption{Inženerski pokazatelji na odziv stopničaste reference pri hitrostnem vodenju.}
+	\caption{In\v{z}enerski pokazatelji na odziv stopni\v{c}aste reference pri hitrostnem vodenju.}
 	\label{table:vel_stepy}
 \end{table}
