--- a/Tabele/tq_step.tex
+++ b/Tabele/tq_step.tex
@@ -3,11 +3,11 @@
 	\begin{footnotesize}
 		\begin{tabular}{|l c l|}
 		\hline
-		$ t_m $ & = & 0,01 \\
-		$ t_r $ & = & 0,048 \\
-		$ t_p $ & = & 0,19 \\
-		$ M_p $ & = & 0,106072 \\
-		$ t_s $ & = & 0,284 \\
+		$ t_m $ & = & 0,008 s\\
+		$ t_r $ & = & 0,134 s\\
+		$ t_p $ & = & 0,25 s\\
+		$ M_p $ & = & 0,1001 rad\\
+		$ t_s $ & = & 0,186 s\\
 		\hline
 		\end{tabular}
 	\end{footnotesize}
