Abstract and introduction

--- a/literatura.bib
+++ b/literatura.bib
@@ -9,20 +9,29 @@
 	author = "Avery Pennarun",
 	title = "{Linux ARCnet HOWTO}",
 	howpublished = "Dosegljivo: \url{http://apenwarr.ca/arcnet/howto/index.html}",
-	note = "[Dostopano: 6. 17. 2015]"
+	note = "[Dostopano: 13. 8. 2015]"
 }
+
+
+
+@misc{iso_robotics,
+	title = "{ISO 8373:2012}",
+	howpublished = "Dosegljivo: \url{https://www.iso.org/obp/ui/\#iso:std:iso:8373:ed-2:v1:en}",
+	note = "[Dostopano: 13. 8. 2015]"
+}
+
 @misc{jr3_doc_ext,
 	author = "JR3, INC.",
 	title = "{JR3, Installation manual for force - torque sensors with internal electronics}",
 	howpublished = "Dosegljivo: \url{http://www.jr3.com/product-manuals.html}",
-	note = "[Dostopano: 6. 17. 2015]"
+	note = "[Dostopano: 13. 8. 2015]"
 }
 
 @misc{jr3_doc_inst,
 	author = "JR3, INC.",
 	title = "{JR3, DPS-based force sensor receivers, software and installation manual}",
 	howpublished = "Dosegljivo: \url{http://www.jr3.com/product-manuals.html}",
-	note = "[Dostopano: 6. 17. 2015]"
+	note = "[Dostopano: 13. 8. 2015]"
 }
 
 @MANUAL{pa10-manual,
@@ -129,9 +138,20 @@
 	year={2009},
 }
 
+The EvolutionOfRobotics
+
+@article{garcia_evolutionrob,
+	title={The Evolution of Robotics Research},
+	author={Garcia, Elena and Jimenez, Maria A. and De Santos, Pablo G. and Armada, Manuel},
+	journal={Robotics & Automation Magazine, IEEE},
+	volume={14},
+	year={2007},
+	pages={90 - 103},
+
+}
+
 @article{almassri_pressure_sensor,
-	title={Pressure Sensor: State of the Art, Design, and Application for
-	Robotic Hand},
+	title={Pressure Sensor: State of the Art, Design, and Application for Robotic Hand},
 	author={Almassri, Ahmed M. and Hasan, W. Z. Wan and Ahmad, S. A. and Ishak, A. J. and Ghazali, A. M. and Talib, D. N. and Wada, Chikamune},
 	journal={Hindawi Publishing Corporation, Jurnal of Sensors},
 	year={2014},
